# MeshStep

./: .gitignore  .gitmodules  README.md  a_output_3_quads.vtk  clean_outputs.sh  historial_completo_new.txt  manual.html  meshstep.flatpak.yaml  meshstep.pro  output1.vtk  prompt.txt  requirements.txt  run-meshstep.sh  salida.vtk  setup.py  setup.sh  square.py  tvk_viewer.py
Colores/: a_output_5.vtk  a_output_5_quads_pintado.vtk  angulo.py  aspec_ratio.py  out1.vtk  out_angle.vtk  out_area.vtk  out_area5.vtk  out_aspect.vtk  quads_coloreados.vtk
Franco/: README  Test.py  Vtkanimado.py  a_output_1_grid_subdividida.vtk  a_output_1_quads.vtk  a_output_2_grid_subdividida.vtk  a_output_2_quads.vtk  a_output_3_closeto.vtk  a_output_3_quads_completo.vtk  a_output_3_quads_cuadrada.vtk  a_output_5_grid_subdividida.vtk  a_output_5_transition.vtk  a_output_clasico.vtk  a_output_compactado.vtk  a_output_nativo.vtk  bar_output_1_grid copy.vtk  bar_output_1_grid_subdiv.vtk  bar_output_1_quads.vtk  bar_output_1_quads_completo.vtk  bar_output_1_quads_completo_ascii.vtk  completar_malla.py  feriaOGL.py  feriaVTK.py  malla_subdividida6.vtk  malla_subdividida_por_caras.vtk  output.vtk  output2.vtk  output3.vtk  subdivider.py  (+1 more)
core/jeans/: CMakeLists.txt  Element.cpp  Element.h  Hexahedron.cpp  Hexahedron.h  Main.cpp  Main.h  Metric.cpp  Metric.h  MetricJR.cpp  MetricJR.h  MetricJeans.cpp  MetricJeans.h  MetricJens.cpp  MetricJens.h  MetricJs.cpp  MetricJs.h  Prism.cpp  Prism.h  Pyramid.cpp  Pyramid.h  Quality.cpp  Quality.h  Tetrahedron.cpp
core/jeans/math/: Container1.cpp  Matrix.cpp
(+99 files in other folders)
